Readability + mobile responsive fixes.

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ section {
     }
 }
 
-@media screen and (max-width: 360px){
+@media screen and (max-width: 420px){
 	nav .brand-logo {
 		font-size: 1.5em;
 	}
